tests/snapshots/integration__integration_tests__list__task_dag_ordering_stability.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--progressive"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m           [1mStatus[0m              [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m               [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m              [1mMessage[0m
^ [36mmain[0m                    [2m^[0m                            [36m./test-repo[0m                 [2m6c3da842[0m  [2m10 months ago[0m    [2mInitial commit on main[0m
@ [1m[35mfeature-current[0m         [2m↑[0m                    [32m↑1[0m      [1m[35m./feature-current[0m           [2mfc28a4d1[0m  [2m9 months ago[0m     [2mCommit at 01:00[0m
+ feature-newest          [2m↑[0m                    [32m↑1[0m      ./feature-newest            [2m136358eb[0m  [2m9 months ago[0m     [2mCommit at 03:00[0m
+ feature-middle          [2m↑[0m                    [32m↑1[0m      ./feature-middle            [2ma0a4851a[0m  [2m9 months ago[0m     [2mCommit at 02:00[0m
+ feature-oldest          [2m↑[0m                    [32m↑1[0m      ./feature-oldest            [2m1b1a2d78[0m  [2m9 months ago[0m     [2mCommit at 00:30[0m

⚪ [2mShowing 5 worktrees, 4 ahead[0m
